# wachtmeater

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DOCKERHUB_OVERVIEW.md  Dockerfile  LICENSEMIT.md  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  runcli.sh  wachtmeater.toml.example
.github/workflows/: buildmultiarchandpush.yml  checkblack.yml  mypynpytests.yml  update-clone-badge.yml
k8s/operator/: README.md  configmap.example.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
repo_scripts/: blurimage.py  build-container-multiarch.sh  check_dockerhub_token.py  dh_login.py  include.sh  initial_setup_github_dockerhub.sh  update_badge.py
tests/: __init__.py  conftest.py  test_call_pitmaster.py  test_cli.py  test_config.py  test_create_meater_watcher_job.py  test_init.py  test_meater_monitor.py  test_meater_watcher.py  test_operator.py
wachtmeater/: __init__.py  call_pitmaster.py  cli.py  config.py  create_meater_watcher_job.py  matrix_adapter.py  meater_monitor.py  meater_watcher.py  messaging.py  operator.py
wachtmeater/templates/: wachtmeater.toml.j2
